# Multimodal-Emotion-Recognition-from-Audio-and-Transcript

./: Multimodal_Emotion_Recognition (4).ipynb  README.md  pyproject.toml
